Fix issue of photo spacing

--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,6 @@ html {
   box-sizing: inherit;
 }
 
-.img{
-
-}
-
 section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
